tested currentUser access, needed to change create user because wrong auth saved
