# src/internal/controllers/users_controller.go
@@ -24,6 +24,22 @@ func (c *Controller) CGetUserById(id string) models.Response {
 	return response
 }
 
+func (c *Controller) CGetUserByAuthId(authId string) models.Response {
+	coll := c.db.GetCollection(repositories.UserColl)
+	filter := bson.M{"auth_id": authId}
+	response := coll.FindOne(filter)
+
+	if utils.IsTypeError(response) {
+		return response
+	}
+
+	if utils.IsType(response, models.UserDB{}) && response.Data.(*models.UserDB).Active == false {
+		return utils.ErrorDeleted("User collection")
+	}
+
+	return response
+}
+
 func (c *Controller) CListUsers(set, search string) models.Response {
 	coll := c.db.GetCollection(repositories.UserColl)
 	response := coll.FindAll(bson.M{}, 0, 0)
@@ -34,7 +50,7 @@ func (c *Controller) CListUsers(set, search string) models.Response {
 	}
 
 	for _, usersObject := range response.Data.([]*models.UserDB) {
-		users = append(users, UserDBToOutput(usersObject))
+		users = append(users, models.UserDBToOutput(usersObject))
 	}
 
 	return utils.Response(users)
@@ -55,13 +71,4 @@ func (c *Controller) CUpdateUser(id string, user *models.UserInput) models.Respo
 		"active":   user.Active,
 	})
 	return response
-}
-
-func UserDBToOutput(db *models.UserDB) *models.UserOutput {
-	return &models.UserOutput{
-		Id:        db.Id,
-		Username:  db.Username,
-		CreatedAt: db.CreatedAt,
-		Active:    db.Active,
-	}
 }
